# excel-semantic-md-converter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/phase1/: knowledge.md  plan.md  spec.md  task.md
docs/review/phase1/: agents-init.md  phase1-block-detection.md  phase1-cli.md  phase1-excel-com-rendering.md  phase1-llm-integration.md  phase1-ooxml-visual-metadata.md  phase1-output-generation.md  phase1-requirements-implementation-review.md  phase1-skeleton-models.md  phase1-validation-review.md  phase1-visual-linking.md  phase1-workbook-reading.md
skills/excel-semantic-markdown/: SKILL.md  examples.md  run_excel_semantic_md.ps1
src/excel_semantic_md/: __init__.py  models.py
src/excel_semantic_md/app/: __init__.py  convert_pipeline.py
src/excel_semantic_md/cli/: main.py
src/excel_semantic_md/excel/: __init__.py  block_detector.py  ooxml_visual_reader.py  visual_linker.py  workbook_reader.py
src/excel_semantic_md/llm/: __init__.py  adapter.py  builders.py  models.py  parser.py  prompt.py
src/excel_semantic_md/output/: __init__.py  models.py  writers.py
src/excel_semantic_md/render/: __init__.py  excel_com_renderer.py  planner.py  types.py
tests/: test_block_detector.py  test_cli.py  test_llm.py  test_models.py  test_ooxml_visual_reader.py  test_output.py  test_render.py  test_visual_linker.py  test_workbook_reader.py
tests/fixtures/visuals/: broken-drawing-rel.xlsx  chart-visual.xlsx  image-visual.xlsm  image-visual.xlsx  no-visuals.xlsx  shape-unknown.xlsx  table-image-visual.xlsx  table-shape-visual.xlsx
